# ndn-multi-party-signature

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmark.md  sample-schema.info  sample-schema.json  sample-trusted-ids.info
docs/: demo.md  follow-ndn-cxx-or-not.md  go-with-ndn-cxx-or-not.md  multiparty-signing-protocol.md  multiparty-trust-schema.md  multiparty-trust-with-ndncert-dledger.md  project-schedule.md  protocol.graffle
include/ndnmps/: bls-helpers.hpp  common.hpp  crypto-helpers.hpp  crypto-players.hpp  initiator.hpp  mps-signer-list.hpp  multi-party-key-locator.hpp  multi-party-signature.hpp  players.hpp  schema.hpp  signer.hpp  verifier.hpp
src/: bls-helpers.cpp  bls.cpp  bls.hpp  common.cpp  crypto-helpers.cpp  crypto-helpers.hpp  crypto-players.cpp  initiator.cpp  mps-signer-list.cpp  multi-party-key-locator.cpp  multi-party-signature.cpp  players.cpp  players.hpp  schema.cpp  schema.hpp  signer.cpp  verifier.cpp
temp/: crypto-players.t.cpp  players.cpp  players.t.cpp
tests/: CMakeLists.txt  boost-test.hpp  global-configuration.cpp  identity-management-fixture.cpp  identity-management-fixture.hpp  main.cpp  test-common.hpp  unit-test-time-fixture.hpp  unit-test.cpp
tests/unit-tests/: bench.t.cpp  bls-helper.t.cpp  configuration.t.cpp  crypto-players.t.cpp  mps-signer-list.t.cpp  players.t.cpp  schema.t.cpp
tests/unit-tests/config-files/: sample-schema.info  sample-schema.json
